--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="testimonials">
       <article class="testimonial">
         <div class="reviewer"> 
-           <image src="./images/image-daniel.jpg" alt="Daniel Clifford" class="daniel"> <!-- image of Daniel -->
+           <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="daniel"> <!-- image of Daniel -->
             <div class="reviewer-info">
                <h2>Daniel Clifford</h2>
         <p>Verified Graduate</p>
@@ -35,7 +35,7 @@
       </article>
       <article class="testimonial">
         <div class="reviewer">
-        <image src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="jonathan"> <!-- image of Jonathan -->
+        <img src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="jonathan"> <!-- image of Jonathan -->
           <div class="reviewer-info">
             <h2>Jonathan Walters</h2>
         <p>  Verified Graduate</p>
@@ -50,7 +50,7 @@
       </article>
       <article class="testimonial">
         <div class="reviewer">
-        <image src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="jeanette"> <!-- image of Jeanette -->
+        <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="jeanette"> <!-- image of Jeanette -->
           <div class="reviewer-info">
               <h2>Jeanette Harmon</h2>
         <p>  Verified Graduate</p>
@@ -65,7 +65,7 @@
       </article>
       <article class="testimonial">
         <div class="reviewer">
-          <image src="./images/image-patrick.jpg" alt="Patrick Abrams" class="patrick"> <!-- image of Patrick -->
+          <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="patrick"> <!-- image of Patrick -->
             <div class="reviewer-info">
                  <h2>Patrick Abrams</h2>
         <p>  Verified Graduate</p>
@@ -84,7 +84,7 @@
       </article>
       <article class="testimonial">
        <div class="reviewer">
-        <image src="./images/image-kira.jpg" alt="Kira Whittle" class="kira"> <!-- image of Kira -->
+        <img src="./images/image-kira.jpg" alt="Kira Whittle" class="kira"> <!-- image of Kira -->
           <div class="reviewer-info">
              <h2>Kira Whittle</h2>
         <p>  Verified Graduate</p>
